<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/title_bar_height"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            style="@style/Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_type_password"
            android:textColor="@color/text_label"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_type_password"
            android:inputType="textPassword"
            android:password="true"/>

        <TextView
            style="@style/Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_type_password_new"
            android:textColor="@color/text_label"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/field_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_type_password_new"
            android:inputType="textPassword"
            android:password="true"/>

        <TextView
            style="@style/Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_type_password_again"
            android:textColor="@color/text_label"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/field_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_type_password_again"
            android:inputType="textPassword"
            android:password="true"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_tiffany_blue"
            android:text="@string/btn_update"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>